Add prompt functionality

--- a/interfaceCreator/package.json
+++ b/interfaceCreator/package.json
@@ -12,5 +12,8 @@
     "start": "node src/index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "prompt-sync": "^4.2.0"
+  }
 }
