--- a/interfaceCreator/package.json
+++ b/interfaceCreator/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "interfacecreator",
+  "name": "@jacoobanderson/interface-creator",
   "version": "1.0.0",
-  "description": "",
+  "description": "A module that helps in creating a terminal user interface",
   "main": "index.js",
   "type": "module",
   "directories": {
@@ -12,7 +12,7 @@
     "start": "node src/index.js"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "prompt-sync": "^4.2.0"
   }
